--- a/Sem2/Metrics/PSets/PS1.html
+++ b/Sem2/Metrics/PSets/PS1.html
@@ -70,22 +70,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <link href="PS1_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="PS1_files/libs/bootstrap/bootstrap-973236bd072d72a04ee9cd82dcc9cb29.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
-  <script>window.backupDefine = window.define; window.define = undefined;</script><script src="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.js"></script>
-  <script>document.addEventListener("DOMContentLoaded", function () {
- var mathElements = document.getElementsByClassName("math");
- var macros = [];
- for (var i = 0; i < mathElements.length; i++) {
-  var texText = mathElements[i].firstChild;
-  if (mathElements[i].tagName == "SPAN") {
-   katex.render(texText.data, mathElements[i], {
-    displayMode: mathElements[i].classList.contains('display'),
-    throwOnError: false,
-    macros: macros,
-    fleqn: false
-   });
-}}});
-  </script>
-  <script>window.define = window.backupDefine; window.backupDefine = undefined;</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
+  <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 const typesetMath = (el) => {
@@ -167,7 +153,7 @@ window.Quarto = {
 </section>
 <section id="problem-2" class="level1">
 <h1>Problem 2:</h1>
-<p>Try three approaches to calculate the sum of the numbers 1 to <span class="math inline">n</span></p>
+<p>Try three approaches to calculate the sum of the numbers 1 to <span class="math inline">\(n\)</span></p>
 <section id="approach-1" class="level2">
 <h2 class="anchored" data-anchor-id="approach-1">Approach 1:</h2>
 <div class="cell">
